# solana-Trade

./: .gitignore  README.md
SolanaTrade/: README.md  index.html  package-lock.json  package.json  vite.config.ts
SolanaTrade/anchor/: Anchor.toml
SolanaTrade/anchor/programs/SolanaTrade/: Cargo.toml
SolanaTrade/anchor/programs/SolanaTrade/src/: error.rs  lib.rs  state.rs
SolanaTrade/anchor/programs/SolanaTrade/src/instructions/: accept_a_buy.rs  create_offer.rs  create_stock.rs  mod.rs
SolanaTrade/anchor/src/: SolanaTrade-exports.ts  index.ts
SolanaTrade/anchor/tests/: SolanaTrade.spec.ts
SolanaTrade/backups/: vite.config.ts
SolanaTrade/backups/shims/: eventemitter3.ts  index.browser.mjs  solana-web3-fix.ts  ws.ts
SolanaTrade/src/: index.css  main.tsx  setup-env.ts  vite-env.d.ts
SolanaTrade/src/app/: app-routes.tsx
SolanaTrade/src/components/SolanaTrade/: SolanaTrade-data-access.tsx  SolanaTrade-feature.tsx  SolanaTrade-ui.tsx
SolanaTrade/src/components/auth/: AdminPanel.tsx  AdminRoute.tsx  LoginForm.tsx  ProtectedRoute.tsx  UserMenu.tsx
SolanaTrade/src/components/dashboard/: dashboard-feature.tsx
SolanaTrade/src/components/solana/: solana-provider.tsx
SolanaTrade/src/components/trading/: IntraDayTradingFeature.tsx  MarketOverview.tsx  MarketplaceFeature.tsx  (+15 more)
SolanaTrade/src/contexts/: AnchorClientContext.tsx  AuthContext.tsx
SolanaTrade/src/services/: anchor-client.ts  anchor-idl.ts
SolanaTrade/src/shims/: eventemitter3.ts  index.browser.mjs  jsonrpc-ws-connection.ts  rpc-websocket-patch.ts  solana-web3-fix.ts  web3-fix.ts
(+2 files in other folders)
