[package]
name = "SolanaTrade"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "SolanaTrade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=0.28.0"
toml_edit = { version = "=0.19.15", optional = true }

[dependencies.solana-program]
version = "=1.16.14"
optional = true
